# aws-lakehouse

./: .gitignore  README.md  deploy.sh  makefile  pyproject.toml  requirements.txt
glue-jobs/: iceberg_maintenance.py  noaa_dimensions_bronze_to_silver.py  noaa_ghcn_bronze_to_silver.py  noaa_ghcn_silver_to_gold.py  nyc_tlc_to_silver.py  nyc_trips_gold.py
lambda/: nyc_tlc_ingest.py
terraform/: .gitignore  glue.tf  lambda.tf  main.tf  outputs.tf  resource_groups.tf  stepfunctions.tf  tfplan  variables.tf
