[tool.poetry]
name = "aws-lakehouse"
version = "0.1.0"
description = "AWS Lakehouse - Mini Lakehouse Profissional"
authors = ["lucas-placido <lucas.cplacido@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.0"
botocore = "^1.31.0"
pyspark = "^3.4.0"
pandas = "^2.0.0"
pyarrow = "^12.0.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
